# mva-compstats

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
notebook/: test.ipynb
src/bct/: baycotrain.py  densities.py  utils.py
