[metadata]
name = bct
description = python implementation of bayesian co-training
authors =
	Gabriel Belouze
	Raphaël Rozenberg
license = MIT
classifiers =
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages =
	bct
package_dir =
	=src
install_requires =
	numpy >= 1.20.0
	scipy >= 1.7.0
python_requires = >=3.8
zip_safe = no

[options.extras_require]
testing =
	pytest>=0.6
	mypy>=0.910
	flake8>=3.9

[options.package_data]
bct = py.typed

[flake8]
max-line-length = 100
ignore = E501
exclude =
	.git
	__pycache__
max-complexity = 10
